# liteczos

./: .gitignore  README.md  pyproject.toml
notebooks/: plot_green.ipynb
src/liteczos/: charlebois.py  hamiltonians.py  lanczos.py  second_quantized.py  twosites.py
tests/: test_charlebois.py  test_hamiltonians.py  test_lanczos.py  test_second_quantized.py  test_twosites.py
